deploy-version.yml
apiVersion: v1
kind: Namespace
metadata:
  name: baz-service
---
apiVersion: v1
kind: Service
metadata:
  name: baz-service
  namespace: baz-service
  labels:
    app: baz-service
    version: "2.0"
spec:
  selector:
    app: baz-service
    version: "2.0"
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baz-deployment
  namespace: baz-service
  labels:
    app: baz-service
    version: "2.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baz-service
      version: "2.0"
  template:
    metadata:
      labels:
        app: baz-service
        version: "2.0"
    spec:
      containers:
      - name: baz-service
        image: httpd
        ports:
        - containerPort: 80
